# EPU-LLM

./: .dvcignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  docker-compose.yaml  environment.yml  example.ipynb  main.py  mlruns.dvc  pyproject.toml  scrap
.dvc/: .gitignore  config
config/: main.yaml
config/model/: chatgpt.yaml  openai.yaml
config/process/: download_korean.yaml  scraping.yaml
data/: .gitignore  predict.dvc  processed.dvc  raw.dvc
data/processed/: reason_example_3.jsonl  reason_example_6.jsonl  reason_example_8.jsonl
data/processed/fine_tune/: 50_no_reason_train.jsonl
data/raw/: .gitignore  bigkinds.dvc
dockerfile/model/: Dockerfile
docs/: conf.py
examples/: example.ipynb
models/: .gitignore  chatgpt.dvc
notebooks/: CoT.ipynb  demo_chatGPT_classify.ipynb  fine_tune_test.ipynb  json2jsonl.ipynb  memory.ipynb  openai_fine_tune.ipynb  prompt_engineering_reason_example.ipynb  re_predict.ipynb  test.ipynb  text_cls_prototype.ipynb
prompt_template/: human.json  system.json
report/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.xdv
report/Results/Tables/: cot_reasons.tex  few_shot_news.tex  few_shot_reasons.tex  gpt_answer.tex
report/meetings/2024-01-22/: main.fdb_latexmk  main.fls  main.tex  main.xdv
report/meetings/2024-01-29/: main.aux  main.fdb_latexmk  main.fls  main.ipynb  main.snm  main.tex  main.xdv
report/meetings/2024-02-12/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.ipynb  main.tex  main.xdv
report/meetings/2024-02-19/: main.aux  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.ipynb  main.nav  main.out  main.run.xml  main.tex  main.toc  main.xdv  xelatex9813.fls
report/meetings/introduce_llm/: main.tex
report/meetings/template/: main.tex
report/progress_report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.xdv
report/progress_report/Tables/: Mechanism: Financial Constraint: PayDexMin.tex  cot_reasons.tex  eval_metric.tex  few_shot_news.tex  gpt_answer.tex
report/progress_report/lib/: fonts.tex
report/src/: preamble.tex
script/: chatgpt_predict.sh  compile_prompt.py  get_system_human_prompt_template.sh  jupyter.sh  list_file.sh  list_job.sh  mlflow.sh  predict.py  reason.py
scripts/: compile_prompt.py  predict.py  reason.py
src/: creat_env.py  main.py  predict.py  utils.py
src/data/: HttpxScraper.py  PlayWrightScraper.py  Scraper.py  download.py  download_bigkinds_data.py  korean_data.py
src/models/: chatgpt.py  chatgpt3.5_turbo.py  creat_env.py  fine_tune.py  get_system_human_prompt_template.py  openai.py  predict.py  prompt.py  utils.py
src/process/: __init__.py  query_keywords.py  record_sc_res.py  utils.py
src/scrap/: creat_env.py  main.py
(+15 files in other folders)
