[tool.poetry]
name = "epu_denoise"
version = "0.1.0"
description = ""
authors = ["githubjacky"]

[tool.poetry.dependencies]
python = "3.11.4"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
playwright = "^1.36.0"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"
loguru = "^0.7.0"
langchain = {extras = ["llms"], version = "^0.0.249"}
pandas = "^2.0.3"
orjson = "^3.9.4"
httpx = {extras = ["socks"], version = "^0.24.1"}
asyncio = "^3.4.3"
nest-asyncio = "^1.5.7"
aiolimiter = "^1.1.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
