[tool.poetry]
name = "epu_denoise"
version = "0.1.0"
description = ""
authors = ["githubjacky"]

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
playwright = "^1.36.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
pandas = "^2.0.3"
orjson = "^3.9.4"
tqdm = "^4.66.1"
pydantic = "<2"

[tool.poetry.group.data.dependencies]
openpyxl = "^3.1.2"
httpx = {extras = ["socks"], version = "^0.24.1"}
asyncio = "^3.4.3"
nest-asyncio = "^1.5.7"
aiolimiter = "^1.1.0"

[tool.poetry.group.model.dependencies]
scikit-learn = "^1.3.0"
openai = "^0.28.0"
mlflow = "^2.7.1"
tiktoken = "^0.5.1"
langchain = "^0.0.305"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.25.0"
jupyterlab = "^4.0.5"
poetry-kernel = "^0.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
